# EduShark

./: .gitignore  readme.md
back_end/: CMakeLists.txt  info.yaml  main.cpp  packet_capture.cpp  packet_capture.hpp  packet_parser.cpp  packet_parser.hpp
front_end/: index.html  main.js  package-lock.json  package.json  preload.js  render.js  renderer.js  style.css
front_end/src/data/: mockPackets.js
